Add Admin Product Dashboard feature
Introduced a new Admin Product Dashboard feature, including API, DTOs, and service implementation. This feature provides product metrics such as counts of active, inactive, and all products, along with categorized product lists. Updated the repository and utility classes to support these functionalities.