@@ -1,6 +1,8 @@
 package org.exp.primeapp.service.impl.user;
 
 import lombok.RequiredArgsConstructor;
+import org.exp.primeapp.models.dto.responce.admin.AdminProductDashboardRes;
+import org.exp.primeapp.models.dto.responce.admin.AdminProductRes;
 import org.exp.primeapp.models.dto.responce.user.ProductRes;
 import org.exp.primeapp.models.dto.responce.user.ProductSizeRes;
 import org.exp.primeapp.models.entities.Attachment;
@@ -8,9 +10,11 @@ import org.exp.primeapp.models.entities.Product;
 import org.exp.primeapp.repository.ProductRepository;
 import org.exp.primeapp.service.interfaces.user.ProductService;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
+import static java.util.stream.Collectors.toList;
 
 @Service
 @RequiredArgsConstructor
@@ -23,7 +27,36 @@ public class ProductServiceImpl implements ProductService {
         return productRepository.findAll()
                 .stream()
                 .map(this::convertToProductRes)
-                .collect(Collectors.toList());
+                .collect(toList());
+    }
+
+    @Override
+    @Transactional
+    public AdminProductDashboardRes getProductDashboarRes() {
+        List<AdminProductRes> productResList = productRepository.findAll().stream().map(this::convertToAdminProductRes).toList();
+        List<AdminProductRes> productResByActive = productRepository.findAllByActive(true).stream().map(this::convertToAdminProductRes).toList();
+        List<AdminProductRes> productResByInactive = productRepository.findAllByActive(false).stream().map(this::convertToAdminProductRes).toList();
+
+        long count = productRepository.count();
+        long countedByActive = productRepository.countByActive(true);
+        long countedByInactive = productRepository.countByActive(false);
+
+        return AdminProductDashboardRes.builder()
+                .count(count)
+                .activeCount(countedByActive)
+                .inactiveCount(countedByInactive)
+                .productResList(productResList)
+                .ActiveProductResList(productResByActive)
+                .InactiveProductResList(productResByInactive)
+                .build();
+    }
+
+    private AdminProductRes convertToAdminProductRes(Product product) {
+        return new AdminProductRes(
+                product.getId(),
+                product.getName(),
+                product.getActive()
+        );
     }
 
     @Override
@@ -31,7 +64,7 @@ public class ProductServiceImpl implements ProductService {
         return productRepository.findAllByActive(true)
                 .stream()
                 .map(this::convertToProductRes)
-                .collect(Collectors.toList());
+                .collect(toList());
     }
 
     @Override
@@ -39,7 +72,7 @@ public class ProductServiceImpl implements ProductService {
         return productRepository.findAllByActive(false)
                 .stream()
                 .map(this::convertToProductRes)
-                .collect(Collectors.toList());
+                .collect(toList());
     }
 
     @Override
@@ -47,7 +80,7 @@ public class ProductServiceImpl implements ProductService {
         return productRepository.findByActiveAndCategoryId(categoryId, true)
                 .stream()
                 .map(this::convertToProductRes)
-                .collect(Collectors.toList());
+                .collect(toList());
     }
 
     @Override
@@ -55,7 +88,7 @@ public class ProductServiceImpl implements ProductService {
         return productRepository.findByActiveAndCategoryId(categoryId, false)
                 .stream()
                 .map(this::convertToProductRes)
-                .collect(Collectors.toList());
+                .collect(toList());
     }
 
     @Override
@@ -69,12 +102,12 @@ public class ProductServiceImpl implements ProductService {
         List<String> attachmentKeys = product.getAttachments()
                 .stream()
                 .map(Attachment::getKey)
-                .collect(Collectors.toList());
+                .collect(toList());
 
         List<ProductSizeRes> productSizes = product.getSizes()
                 .stream()
                 .map(size -> new ProductSizeRes(size.getSize(), size.getAmount()))
-                .collect(Collectors.toList());
+                .collect(toList());
 
         return new ProductRes(
                 product.getId(),
